<resources>
    <string name="app_name">MyBT LicenseControl App</string>
    <string name="title_activity_bt">BtActivity</string>
    <string name="scanning">scanning</string>
    <string name="list">list</string>
    <string name="scan">Scan</string>
    <string name="send_for_test">Send byte</string>
    <string name="send_char">Send char</string>
    <string name="blink">Blink</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="connect_my_device">connect My Device</string>
    <string name="x">x</string>
    <string name="front">front</string>
    <string name="back">back</string>
</resources>
