<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyBtActivity">

    <ListView
        android:layout_width="140dp"
        android:layout_height="186dp"
        android:id="@+id/listPaired_Devices"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="64dp"
        android:text="@string/list"
        android:id="@+id/button_paired"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/button_scan"
        android:layout_alignBottom="@+id/button_scan"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height="50dp"
        android:text="@string/scan"
        android:id="@+id/button_scan"
        android:layout_width="65dp"
        android:layout_below="@+id/list_New_BT_Devices"
        android:layout_alignEnd="@+id/list_New_BT_Devices" />

    <ListView
        android:layout_width="140dp"
        android:layout_height="186dp"
        android:id="@+id/list_New_BT_Devices"
        android:visibility="visible"
        android:layout_alignParentEnd="true"
        android:choiceMode="singleChoice"
        android:layout_alignBottom="@+id/listPaired_Devices" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_for_test"
        android:onClick="onClickSend"
        android:id="@+id/btn_sendTEST"
        android:layout_alignTop="@+id/btn_sendChar"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blink"
        android:onClick="sendCharMessage"
        android:id="@+id/btn_sendChar"
        android:layout_below="@+id/button_paired"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="connect My Device"
        android:onClick="connectH506"
        android:id="@+id/button_conn"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btn_sendChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:onClick="sendLEFTSERVOCharMessage"
        android:id="@+id/button"
        android:drawableTint="@android:drawable/ic_media_rew"
        android:layout_above="@+id/button_conn"
        android:layout_alignEnd="@+id/listPaired_Devices"
        android:layout_marginBottom="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:onClick="sendRIGHTCharMessage"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/button"
        android:layout_alignStart="@+id/list_New_BT_Devices" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x"
        android:onClick="sendCENTERCharMessage"
        android:id="@+id/button3"
        android:drawableTint="@android:drawable/ic_media_rew"
        android:layout_above="@+id/btn_sendTEST"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
